language/move-lang/tests/move_check/typing/mutate_resource.exp
error: 

   ┌── tests/move_check/typing/mutate_resource.move:2:5 ───
   │
 5 │         *r = R {};
   │          ^ Invalid mutation. Can only assign to references of a copyable type
   ·
 5 │         *r = R {};
   │          - The type: 0x8675309::M::R
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/mutate_resource.move:8:8 ───
   │
 9 │         *r = x;
   │          ^ Invalid mutation. Can only assign to references of a copyable type
   ·
 9 │         *r = x;
   │          - The type: T
   ·
 8 │     t1<T>(r: &mut T, x: T) {
   │        - Is found to be a non-copyable type here
   │

error: 

    ┌── tests/move_check/typing/mutate_resource.move:12:11 ───
    │
 13 │         *r = x;
    │          ^ Invalid mutation. Can only assign to references of a copyable type
    ·
 13 │         *r = x;
    │          - The type: T
    ·
 12 │     t2<T: resource>(r: &mut T, x: T) {
    │           -------- Is found to be a non-copyable type here
    │

